--- a/app/src/main/res/layout/row_entity_offer.xml
+++ b/app/src/main/res/layout/row_entity_offer.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
@@ -30,7 +31,7 @@
             android:maxLines="2"
             android:textSize="@dimen/text_medium"
             android:textStyle="bold"
-            android:text="Fabricantes de sueños"/>
+            tools:text="Fabricantes de sueños"/>
 
         <!--<View style="@style/SeparatorHorizontal.Grey"-->
             <!--android:layout_marginTop="10dp"-->
@@ -42,7 +43,7 @@
             android:textColor="@color/grey"
             android:maxLines="2"
             android:textSize="@dimen/text_small_2"
-            android:text="Fabricantes de sueños"
+            tools:text="Fabricantes de sueños"
             android:layout_marginTop="10dp"/>
 
 
