--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,10 @@
     <dimen name="size_qr">350dp</dimen>
     <dimen name="width_image_standard">300dp</dimen>
 
+    <dimen name="spacing_small">8dp</dimen>
+    <dimen name="spacing_medium">16dp</dimen>
+    <dimen name="spacing_large">24dp</dimen>
+
 
     <dimen name="text_small">11sp</dimen>
     <dimen name="text_small_2">13sp</dimen>
