--- a/app/src/main/res/layout/view_select_mes.xml
+++ b/app/src/main/res/layout/view_select_mes.xml
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         style="@style/TextBase"
         android:text="@string/select_mes"
-        android:textSize="@dimen/text_medium"/>
+        android:textSize="@dimen/text_medium" />
+
+    <ProgressBar
+        android:id="@+id/progress_nodes"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp" />
+
+    <TextView
+        android:id="@+id/tv_error_msg"
+        style="@style/TextBase" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_mes_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="250dp"
         android:layout_marginTop="15dp"
-        tools:listitem="@layout/row_mes_item"
+        android:minHeight="250dp"
         android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="3"
+        tools:listitem="@layout/row_mes_item" />
 
 </LinearLayout>
