﻿Improve attachements. Hide screen if no fediverse server is configured.

--- a/app/src/main/res/layout/row_fediverse_post.xml
+++ b/app/src/main/res/layout/row_fediverse_post.xml
@@ -101,37 +101,41 @@
 
                 <ImageView
                     android:id="@+id/image_preview_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
+                    android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:visibility="gone"/>
 
                 <ImageView
                     android:id="@+id/image_preview_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
+                    android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:visibility="gone"/>
 
                 <ImageView
                     android:id="@+id/image_preview_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
+                    android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:visibility="gone"/>
 
                 <ImageView
                     android:id="@+id/image_preview_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
+                    android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:visibility="gone"/>
 
