--- a/app/src/main/res/layout/activity_info_mes.xml
+++ b/app/src/main/res/layout/activity_info_mes.xml
@@ -5,26 +5,16 @@
     android:layout_height="match_parent"
     android:background="@color/grey_info">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <net.mercadosocial.moneda.views.WebViewCustom
+        android:id="@+id/webview_info_mes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/img_info_mes_1" />
-
-    <View style="@style/XpansorVert" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_where_to_consume"
         style="@style/ButtonMes"
         android:text="@string/where_to_consume"
-        android:layout_gravity="center_horizontal"/>
-
-
-    <View style="@style/XpansorVert" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/img_info_mes_2" />
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="15dp"/>
 </LinearLayout>
