- Fixed Logo field - Added Button with instructions to delete account

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -120,6 +120,18 @@
                 android:textSize="@dimen/text_medium"
                 android:textStyle="normal" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_delete_account"
+                style="@style/ButtonMes"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="15dp"
+                app:backgroundTint="@color/red_dark"
+                android:minWidth="70dp"
+                android:text="@string/delete_account"
+                android:textAllCaps="false"
+                android:textSize="@dimen/text_medium"
+                android:textStyle="normal" />
+
 
         </LinearLayout>
     </ScrollView>
