--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -24,22 +24,28 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <FrameLayout
-                    android:id="@+id/frame_gallery_pager"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
-                    android:background="@color/white" />
+                    android:layout_marginBottom="10dp">
 
-                <ImageView
-                    android:id="@+id/img_entity"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:adjustViewBounds="true"
-                    android:maxHeight="250dp"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/img_entitiy_example"
-                    android:visibility="gone" />
+                    <FrameLayout
+                        android:id="@+id/frame_gallery_pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="50dp"
+                        android:background="@color/white" />
+
+                    <ImageView
+                        android:id="@+id/img_logo_entity"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginStart="20dp"
+                        android:adjustViewBounds="true"
+                        android:src="@mipmap/img_entitiy_example" />
+
+                </RelativeLayout>
 
                 <View style="@style/SeparatorHorizontal.Grey" />
 
@@ -52,9 +58,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="12dp"
                     android:gravity="center_horizontal"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:padding="12dp">
 
                     <ImageView
                         android:id="@+id/btn_rrss_web"
@@ -68,7 +74,7 @@
                         android:orientation="horizontal"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:itemCount="3"
-                        tools:listitem="@layout/item_provider_social_profile"/>
+                        tools:listitem="@layout/item_provider_social_profile" />
 
 
                 </LinearLayout>
@@ -83,18 +89,18 @@
 
                     <TextView
                         style="@style/TextBase.Purple"
+                        android:layout_marginRight="16dp"
                         android:layout_weight="1"
-                        android:text="@string/distintivo_info"
-                        android:layout_marginRight="16dp"/>
+                        android:text="@string/distintivo_info" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/img_distintivo_balance"
                         android:layout_width="wrap_content"
                         android:layout_height="150dp"
-                        app:srcCompat="@mipmap/img_distntivo_balance"
-                        android:adjustViewBounds="true"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="30dp" />
+                        android:layout_marginBottom="30dp"
+                        android:adjustViewBounds="true"
+                        app:srcCompat="@mipmap/img_distntivo_balance" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -150,7 +156,7 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_benefit_link"
                         style="@style/ButtonMes"
-                        android:layout_gravity="center_horizontal"/>
+                        android:layout_gravity="center_horizontal" />
                 </LinearLayout>
 
                 <!-- END BENEFITS SECTION -->
@@ -183,17 +189,17 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:gravity="center_horizontal"
+                        android:padding="12dp"
                         android:text="@string/no_offers_right_now"
-                        android:visibility="gone"
-                        android:padding="12dp" />
+                        android:visibility="gone" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_offers"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:nestedScrollingEnabled="false"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        android:orientation="vertical"/>
+                        android:orientation="vertical"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
                     <View
                         android:layout_width="match_parent"
