--- a/app/src/main/res/layout/fragment_member_card.xml
+++ b/app/src/main/res/layout/fragment_member_card.xml
@@ -106,7 +106,7 @@
 
                 <TextView
                     android:id="@+id/tv_member_name"
-                    style="@style/TextTitleComfortaa"
+                    style="@style/TextTitle"
                     tools:text="Ana García Rodriguez"
                     android:textSize="@dimen/text_medium" />
 
