--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -61,7 +61,7 @@
 
                     <TextView
                         android:id="@+id/tv_profile_name"
-                        style="@style/TextTitleComfortaa"
+                        style="@style/TextTitle"
                         android:layout_marginBottom="20dp"
                         tools:text="Juio Test" />
 
