--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/ic_map"
         android:title="@string/map_list"
         app:showAsAction="always"
+        app:iconTint="@color/items_over_toolbar"
         android:orderInCategory="200"/>
 
 </menu>
