--- a/app/src/main/res/menu/member_card.xml
+++ b/app/src/main/res/menu/member_card.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_scan_qr"
         android:title="@string/search"
         app:showAsAction="always"
-        app:iconTint="@color/purple"
+        app:iconTint="@color/items_over_toolbar"
         android:orderInCategory="200"/>
 
     <item
@@ -15,7 +15,7 @@
         android:icon="@drawable/ic_check"
         android:title="@string/check"
         app:showAsAction="always"
-        app:iconTint="@color/purple"
+        app:iconTint="@color/items_over_toolbar"
         android:orderInCategory="300"/>
 
 
