--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,7 +18,7 @@
     <dimen name="text_large">17sp</dimen>
     <dimen name="text_extra_large">20sp</dimen>
 
-    <dimen name="text_title_comfortaa">21sp</dimen>
+    <dimen name="text_title">32sp</dimen>
     <dimen name="padding_map">20dp</dimen>
 
 </resources>
