--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,9 @@
     <color name="purple_light">#B7A0BF</color>
     <color name="purple_extra_light">#e4dce6</color>
     <color name="purple_dark">#4D2F5C</color>
+
+    <color name="orange_mes">#f78154</color>
+
     <color name="black">#000</color>
 
     <color name="toolbar">@color/purple</color>
