- added provider data to offer - ui improvements

--- a/app/src/main/res/layout/fragment_member_card.xml
+++ b/app/src/main/res/layout/fragment_member_card.xml
@@ -107,8 +107,7 @@
                 <TextView
                     android:id="@+id/tv_member_name"
                     style="@style/TextTitle"
-                    tools:text="Ana García Rodriguez"
-                    android:textSize="@dimen/text_medium" />
+                    tools:text="Ana García Rodriguez" />
 
                 <TextView
                     android:id="@+id/tv_member_type"
