--- a/app/src/main/res/layout/activity_novelty_detail.xml
+++ b/app/src/main/res/layout/activity_novelty_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -44,11 +43,17 @@
 
 
             <TextView
-                android:id="@+id/tv_novelty_subtitle"
+                android:id="@+id/tv_novelty_date"
                 style="@style/TextBase"
-                android:gravity="center_horizontal"
-                android:padding="15dp"
+                android:layout_marginTop="15dp"
                 android:textSize="@dimen/text_medium" />
+
+            <TextView
+                android:id="@+id/tv_novelty_entity"
+                style="@style/TextBase"
+                android:layout_marginTop="15dp"
+                android:textSize="@dimen/text_large"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/tv_novelty_description"
