--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -43,7 +43,9 @@
                         android:layout_alignParentBottom="true"
                         android:layout_marginStart="20dp"
                         android:adjustViewBounds="true"
-                        android:src="@mipmap/img_entitiy_example" />
+                        android:src="@mipmap/img_entitiy_example"
+                        android:background="@drawable/bg_circle_purple"
+                        android:padding="3dp"/>
 
                 </RelativeLayout>
 
