--- a/app/src/main/res/layout/fragment_filter_entities.xml
+++ b/app/src/main/res/layout/fragment_filter_entities.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/only_favs"
                 android:layout_marginBottom="10dp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch_with_benefits"
