--- a/update-app-view/src/main/res/layout/view_update_app.xml
+++ b/update-app-view/src/main/res/layout/view_update_app.xml
@@ -12,6 +12,7 @@
     android:paddingBottom="10dp">
 
     <TextView
+        android:id="@+id/tv_new_version_available"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
