--- a/app/src/main/res/values/langs.xml
+++ b/app/src/main/res/values/langs.xml
@@ -3,14 +3,14 @@
     <string-array name="language_names">
         <item>Castellano</item>
         <item>Euskara</item>
-        <item>Català</item>
-        <item>Galego</item>
+<!--        <item>Català</item>-->
+<!--        <item>Galego</item>-->
     </string-array>
 
     <string-array name="language_codes">
         <item>es</item>
         <item>eu</item>
-        <item>ca</item>
-        <item>gl</item>
+<!--        <item>ca</item>-->
+<!--        <item>gl</item>-->
     </string-array>
 </resources>
